@@ -225,6 +225,7 @@ GW_DEFAULT["RAID_UNIT_HEALTH"] = "NONE"
 
 GW_DEFAULT["HUD_SCALE"] = 1
 GW_DEFAULT["MINIMAP_SCALE"] = 170
+GW_DEFAULT["MINIMAP_FPS"] = false
 GW_DEFAULT["CASTINGBAR_DATA"] = false
 GW_DEFAULT["USE_CHARACTER_WINDOW"] = true
 GW_DEFAULT["USE_TALENT_WINDOW"] = true
